@@ -3,6 +3,8 @@ Revision history for Perl module {{$dist->name}}
 {{$NEXT}}
   - Add support for ALIEN_DOWNLOAD_RULE (gh#28, gh#29)
   - Add support for ALIEN_INSTALL_NETWORK (gh#28, gh#29)
+  - Verify hostnames for SSL connections when ALIEN_DOWNLOAD_RULE
+    requires encryption (gh#28, gh#29)
 
 1.15      2020-08-28 09:50:28 -0600
   - Move inline tests from this distro to Acme::Alien::DontPanic
